[workspace]

resolver = "2"

members = [
  "common",
  "dsntk",
  "evaluator",
  "examples",
  "feel",
  "feel-grammar",
  "feel-evaluator",
  "feel-number",
  "feel-parser",
  "feel-regex",
  "feel-temporal",
  "gendoc",
  "macros",
  "model",
  "model-evaluator",
  "recognizer",
  "server",
  "workspace"
]

[workspace.package]
version = "0.1.0"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/DecisionToolkit/dsntk-rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.9.0"
antex = "0.0.8"
base64 = "0.22.1"
chrono = "0.4.39"
chrono-tz = "0.10.1"
convert_case = "0.7.1"
clap = { version = "4.5.29", features = ["cargo"] }
dfp-number-sys = "0.2.13"
difference = "2.0.0"
domrs = "0.0.16"
markdown = "1.0.0-alpha.22"
once_cell = "1.20.3"
onig = { version = "6.4.0", default-features = false }
petgraph = "0.7.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syn = { version = "2.0.98", features = ["fold", "full"] }
uuid = { version = "1.13.1", features = ["v4"] }
uriparse = "0.6.4"
url = "2.5.4"
urlencoding = "2.1.3"
walkdir = "2.5.0"
dsntk-common = { path = "common" }
dsntk-evaluator = { path = "evaluator" }
dsntk-examples = { path = "examples" }
dsntk-feel = { path = "feel" }
dsntk-feel-evaluator = { path = "feel-evaluator" }
dsntk-feel-grammar = { path = "feel-grammar" }
dsntk-feel-number = { path = "feel-number" }
dsntk-feel-parser = { path = "feel-parser" }
dsntk-feel-regex = { path = "feel-regex" }
dsntk-feel-temporal = { path = "feel-temporal" }
dsntk-gendoc = { path = "gendoc" }
dsntk-macros = { path = "macros" }
dsntk-model = { path = "model" }
dsntk-model-evaluator = { path = "model-evaluator" }
dsntk-recognizer = { path = "recognizer" }
dsntk-server = { path = "server" }
dsntk-workspace = { path = "workspace" }
