[workspace]

resolver = "2"

members = [
    "common",
    "dsntk",
    "evaluator",
    "examples",
    "feel",
    "feel-grammar",
    "feel-evaluator",
    "feel-number",
    "feel-parser",
    "feel-regex",
    "feel-temporal",
    "gendoc",
    "macros",
    "model",
    "model-evaluator",
    "recognizer",
    "server",
    "workspace"
]

[workspace.package]
version = "0.2.0"
authors = ["Dariusz Depta <depta@engos.de>"]
repository = "https://github.com/DecisionToolkit/dsntk-rs.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.10.2"
antex = "0.0.8"
base64 = "0.22.1"
chrono = "0.4.40"
chrono-tz = "0.10.1"
convert_case = "0.8.0"
clap = { version = "4.5.32", features = ["cargo"] }
dfp-number-sys = "0.2.13"
difference = "2.0.0"
domrs = "0.0.16"
markdown = "1.0.0-alpha.23"
once_cell = "1.21.1"
petgraph = "0.7.1"
proc-macro2 = "1.0.94"
quote = "1.0.40"
regex = "1.11.1"
reqwest = { version = "0.12.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.100", features = ["fold", "full"] }
uuid = { version = "1.16.0", features = ["v4"] }
uriparse = "0.6.4"
url = "2.5.4"
urlencoding = "2.1.3"
walkdir = "2.5.0"
dsntk-common = "0.2.0"
dsntk-evaluator = "0.2.0"
dsntk-examples = "0.2.0"
dsntk-feel = "0.2.0"
dsntk-feel-evaluator = "0.2.0"
dsntk-feel-grammar = "0.2.0"
dsntk-feel-number = "0.2.0"
dsntk-feel-parser = "0.2.0"
dsntk-feel-regex = "0.2.0"
dsntk-feel-temporal = "0.2.0"
dsntk-gendoc = "0.2.0"
dsntk-macros = "0.2.0"
dsntk-model = "0.2.0"
dsntk-model-evaluator = "0.2.0"
dsntk-recognizer = "0.2.0"
dsntk-server = "0.2.0"
dsntk-workspace = "0.2.0"
