[package]
name = "dsntk-common"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | Decision Toolkit | Common definitions"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "commons"]
documentation = "https://docs.rs/dsntk-common"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }
dsntk-macros = { workspace = true }
