[package]
name = "dsntk"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | Decision Toolkit"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "dsntk"]
documentation = "https://docs.rs/dsntk"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
tck = ["dsntk-server/tck"]

[dependencies]
actix-web = { workspace = true }
antex = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
dsntk-common = { workspace = true }
dsntk-evaluator = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-feel-parser = { workspace = true }
dsntk-gendoc = { workspace = true }
dsntk-model = { workspace = true }
dsntk-recognizer = { workspace = true }
dsntk-server = { workspace = true }
dsntk-workspace = { workspace = true }
