[package]
name = "dsntk-examples"
version = { workspace = true }
authors = { workspace = true }
description = "Decision Toolkit | Examples"
documentation = "https://docs.rs/dsntk-examples"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dev-dependencies]
walkdir = { workspace = true }
