[package]
name = "dsntk-feel-evaluator"
version = { workspace = true }
authors = { workspace = true }
description = "DSNTK | FEEL evaluator"
documentation = "https://docs.rs/dsntk-feel-evaluator"
repository = "https://github.com/dsntk/dsntk-rs.git"
license = { workspace = true }
edition = { workspace = true }

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dsntk-common = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-feel-parser = { workspace = true }
dsntk-feel-regex = { workspace = true }
dsntk-feel-temporal = { workspace = true }
dsntk-macros = { workspace = true }
