[package]
name = "dsntk-feel-evaluator"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | DecisionToolkit | FEEL expressions evaluator"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "feel"]
documentation = "https://docs.rs/dsntk-feel-evaluator"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dsntk-common = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-feel-parser = { workspace = true }
dsntk-feel-regex = { workspace = true }
dsntk-feel-temporal = { workspace = true }
dsntk-macros = { workspace = true }
