[package]
name = "dsntk-feel-grammar"
version.workspace = true
authors.workspace = true
description = "DSNTK | FEEL grammar"
documentation = "https://docs.rs/dsntk-feel-grammar"
repository = "https://github.com/dsntk/dsntk-rs.git"
license.workspace = true
edition.workspace = true

[dependencies]
convert_case.workspace = true
regex.workspace = true
