[package]
name = "dsntk-feel-grammar"
version = { workspace = true }
authors = { workspace = true }
description = "Decision Toolkit | FEEL grammar"
documentation = "https://docs.rs/dsntk-feel-grammar"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
convert_case = { workspace = true }
regex = { workspace = true }
