[package]
name = "dsntk-feel-grammar"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | DecisionToolkit | FEEL grammar"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "feel"]
documentation = "https://docs.rs/dsntk-feel-grammar"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
convert_case = { workspace = true }
regex = { workspace = true }
