[package]
name = "dsntk-feel-number"
version = { workspace = true }
authors = { workspace = true }
description = "DSNTK | FEEL number"
documentation = "https://docs.rs/dsntk-feel-number"
repository = "https://github.com/dsntk/dsntk-rs.git"
license = { workspace = true }
edition = { workspace = true }

[features]

[dependencies]
dfp-number-sys = { workspace = true }
dsntk-common = { workspace = true }
dsntk-macros = { workspace = true }
