[package]
name = "dsntk-feel-number"
version = { workspace = true }
authors = { workspace = true }
description = "DSNTK | FEEL number"
documentation = "https://docs.rs/dsntk-feel-number"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dfp-number-sys = { workspace = true }
dsntk-common = { workspace = true }
dsntk-macros = { workspace = true }
