[package]
name = "dsntk-feel-number"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | DecisionToolkit | FEEL number"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "feel"]
documentation = "https://docs.rs/dsntk-feel-number"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dfp-number-sys = { workspace = true }
dsntk-common = { workspace = true }
dsntk-macros = { workspace = true }
