[package]
name = "dsntk-feel-parser"
version = { workspace = true }
authors = { workspace = true }
description = "DSNTK | FEEL parser"
documentation = "https://docs.rs/dsntk-feel-parser"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
parsing-tables = []

[dependencies]
dsntk-common = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-macros = { workspace = true }

[dev-dependencies]
difference = { workspace = true }

[build-dependencies]
dsntk-feel-grammar = { workspace = true }
