[package]
name = "dsntk-feel-regex"
version = { workspace = true }
authors = { workspace = true }
description = "Decision Toolkit | FEEL regular expressions"
documentation = "https://docs.rs/dsntk-feel-regex"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
