[package]
name = "dsntk-feel-regex"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | Decision Toolkit | FEEL regular expressions"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "regex"]
documentation = "https://docs.rs/dsntk-feel-regex"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
regex = { workspace = true }
once_cell = { workspace = true }
dsntk-common = { workspace = true }
dsntk-macros = { workspace = true }
