[package]
name = "dsntk-feel-temporal"
version = { workspace = true }
authors = { workspace = true }
description = "DSNTK | FEEL temporal"
documentation = "https://docs.rs/dsntk-feel-temporal"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
dsntk-common = { workspace = true }
dsntk-feel-number = { workspace = true }
dsntk-macros = { workspace = true }
