[package]
name = "dsntk-feel-temporal"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | DecisionToolkit | FEEL temporal"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "temporal"]
documentation = "https://docs.rs/dsntk-feel-temporal"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
dsntk-common = { workspace = true }
dsntk-feel-number = { workspace = true }
dsntk-macros = { workspace = true }
