[package]
name = "dsntk-gendoc"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | Decision Toolkit | Documentation generator"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "documentation"]
documentation = "https://docs.rs/dsntk-gendoc"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
domrs = { workspace = true }
markdown = { workspace = true }
dsntk-common = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-model = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
dsntk-examples = { workspace = true }
dsntk-recognizer = { workspace = true }
