[package]
name = "dsntk-macros"
version = { workspace = true }
authors = { workspace = true }
description = "DSNTK | Procedural and derive macros"
documentation = "https://docs.rs/dsntk-macros"
repository = "https://github.com/dsntk/dsntk-rs.git"
license = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
