[package]
name = "dsntk-macros"
version = { workspace = true }
authors = { workspace = true }
description = "DSNTK | Procedural and derive macros"
documentation = "https://docs.rs/dsntk-macros"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
