[package]
name = "dsntk-macros"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | Decision Toolkit | Procedural and derive macros"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "macros"]
documentation = "https://docs.rs/dsntk-macros"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
