[package]
name = "dsntk-model-evaluator"
version = { workspace = true }
authors = { workspace = true }
description = "dsntk | DecisionToolkit | DMN model evaluator"
categories = ["development-tools", "command-line-utilities", "finance", "parsing"]
keywords = ["dmn", "decision", "toolkit", "evaluator"]
documentation = "https://docs.rs/dsntk-model-evaluator"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dsntk-common = { workspace = true }
dsntk-feel = { workspace = true }
dsntk-feel-evaluator = { workspace = true }
dsntk-feel-parser = { workspace = true }
dsntk-feel-temporal = { workspace = true }
dsntk-macros = { workspace = true }
dsntk-model = { workspace = true }

[dev-dependencies]
antex = { workspace = true }
walkdir = { workspace = true }
dsntk-examples = { workspace = true }
dsntk-recognizer = { workspace = true }
