[package]
name = "dsntk-recognizer"
version = { workspace = true }
authors = { workspace = true }
description = "DSNTK | Decision Table Recognizer"
documentation = "https://docs.rs/dsntk-recognizer"
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
dsntk-common = { workspace = true }
dsntk-macros = { workspace = true }
dsntk-model = { workspace = true }

[dev-dependencies]
dsntk-examples = { workspace = true }
